--- a/frontend/src/components/Room/Room.css
+++ b/frontend/src/components/Room/Room.css
@@ -16,13 +16,14 @@
   background: black;
   width: 100vw;
   height: 100vh;
+  padding: 0;
+  margin: 0;
 }
 
 .roomBody {
   padding-top: 70px;
   padding-bottom: 50px;
-  padding-right: 50px;
-  padding-left: 30px;
+
   width: 100vw;
   height: 100vh;
 }
@@ -128,7 +129,7 @@
 }
 
 .fetcherWrapper {
-  width: 120px;
+  width: 200px;
   height: 130px;
   position: absolute;
   top: 50%;
